add system and vendor

--- a/src/config.json
+++ b/src/config.json
@@ -3,12 +3,12 @@
   "apiUrl": "http://localhost:3000/",
   "menu": [
     {
-      "title": "Books",
-      "link": "/books"
+      "title": "Module1",
+      "link": "/module1"
     },
     {
-      "title": "Authors",
-      "link": "/authors"
+      "title": "Module2",
+      "link": "/module2"
     }
   ]
 }
